# FastAPI-template

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  cookiecutter.json  main.py  pyproject.toml
fastapi_template/template/{{cookiecutter.project_name}}/: .dockerignore  .env  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  aerich.ini  alembic.ini  conditional_files.json  conditional_files.toml  docker-compose.yml  main.py  pyproject.toml  replaceable_files.json  replaceable_files.toml  scheduler.py
fastapi_template/template/{{cookiecutter.project_name}}/.github/workflows/: pre-commit.yml  tests.yml
fastapi_template/template/{{cookiecutter.project_name}}/deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.otlp.yml  docker-compose.yml  otel-collector-config.yml
fastapi_template/template/{{cookiecutter.project_name}}/deploy/kube/: app.yml  db.yml  namespace.yml  rabbit.yml  redis.yml
fastapi_template/template/{{cookiecutter.project_name}}/envs/: test.env
fastapi_template/template/{{cookiecutter.project_name}}/migrations/versions/: 7ae297ab5ac1_created_dummy_model.py
fastapi_template/template/{{cookiecutter.project_name}}/src/api/dummy_db/: routes.py
fastapi_template/template/{{cookiecutter.project_name}}/src/api/httpbin/: __init__.py
fastapi_template/template/{{cookiecutter.project_name}}/src/api/redis_api/: routes.py
fastapi_template/template/{{cookiecutter.project_name}}/src/services/db/: __init__.py  base.py  session.py
fastapi_template/template/{{cookiecutter.project_name}}/src/services/elastic/: client.py  mixin.py
fastapi_template/template/{{cookiecutter.project_name}}/src/services/httpbin/: schema.py
fastapi_template/template/{{cookiecutter.project_name}}/systemd/: {{ cookiecutter.project_name }}_scheduler.service
fastapi_template/template/{{cookiecutter.project_name}}/tests/: __init__.py  conftest.py  test_dummy.py  test_echo.py  test_kafka.py  test_nats.py  test_rabbit.py  test_redis.py  test_{{cookiecutter.project_name}}.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __init__.py  __main__.py  conftest.py  gunicorn_runner.py  log.py  logging.py  piccolo_conf.py  settings.py  taskiq.py  tkq.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/db/: dependencies.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/db/dao/: dummy_dao.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/db/migrations/: env.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/db_beanie/dao/: dummy_dao.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/db_beanie/migrations/: 20251127230818_init.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/db_ormar/: base.py  config.py  utils.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/db_piccolo/: app_conf.py  piccolo_conf.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/db_psycopg/: dependencies.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/db_sa/: base.py  dependencies.py  utils.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/db_tortoise/: config.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/services/: __init__.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/tests/: __init__.py  test_dummy.py  test_echo.py  test_fastapitestproject.py  test_kafka.py  test_rabbit.py  test_redis.py  test_{{cookiecutter.project_name}}.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/web/: __init__.py  application.py  lifespan.py  lifetime.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/web/api/: router.py
template/{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  conditional_files.json  pyproject.toml
template/{{cookiecutter.project_name}}/envs/: example.env
template/{{cookiecutter.project_name}}/src/: exceptions.py
template/{{cookiecutter.project_name}}/src/api/: __init__.py
template/{{cookiecutter.project_name}}/src/api/dummy_db/: __init__.py
template/{{cookiecutter.project_name}}/src/models/: __init__.py
template/{{cookiecutter.project_name}}/src/services/: redis.py
template/{{cookiecutter.project_name}}/src/services/db/: db_meta.py
template/{{cookiecutter.project_name}}/tests/: dummy_db_test.py
{{cookiecutter.project_name}}/: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  conditional_files.json  conditional_files.yaml  deploy.sh  docker-compose.prod.yml  docker-compose.yml  first_run.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  scheduler.py
{{cookiecutter.project_name}}/envs/: .env  .env.example  example.env  test.env
{{cookiecutter.project_name}}/migrations/: env.py
{{cookiecutter.project_name}}/migrations/versions/: 7ae297ab5ac1_created_dummy_model.py
{{cookiecutter.project_name}}/src/: exceptions.py  server.py  settings.py
{{cookiecutter.project_name}}/src/api/: __init__.py
{{cookiecutter.project_name}}/src/api/dummy_db/: routes.py  schema.py
{{cookiecutter.project_name}}/src/api/httpbin/: routes.py
{{cookiecutter.project_name}}/src/api/redis_api/: __init__.py  schema.py
{{cookiecutter.project_name}}/src/models/: dummy_db_model.py
{{cookiecutter.project_name}}/src/services/: db.py  redis.py
{{cookiecutter.project_name}}/src/services/db/: base.py  engine.py  session.py
{{cookiecutter.project_name}}/src/services/elastic/: __init__.py  mixin.py  schema.py
{{cookiecutter.project_name}}/src/services/httpbin/: client.py
{{cookiecutter.project_name}}/systemd/: {{ cookiecutter.project_name }}_service.service
{{cookiecutter.project_name}}/tests/: conftest.py  dummy_db_test.py
(+118 files in other folders)
