[tool.poetry]
name = "fastapi_template"
version = "5.0.2"
description = "Feature-rich robust FastAPI template"
authors = ["Pavel Kirilin <win10@list.ru>"]
packages = [{ include = "fastapi_template" }]
repository = "https://github.com/s3rius/FastAPI-template"
homepage = "https://github.com/s3rius/FastAPI-template"
readme = "README.md"
keywords = ["FastAPI", "Cookiecutter", "Template"]


[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^1.7.3"
pre-commit = "^2.14.0"
termcolor = "^1.1.0"
pydantic = ">=1.10"
typer = {version = "^0.7.0", extras = ["all"]}
simple-term-menu = "^1.5.2"
click = "^8.1.3"
prompt-toolkit = "^3.0.36"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-env = "^0.6.2"
Faker = "^8.14.0"
pytest-xdist = {version = "^2.5.0", extras = ["psutil"]}
requests = "^2.28.1"

[tool.pytest.ini_options]
minversion = "6.0"
markers = [
    "pg: tests for postgresql.",
    "mysql: tests for mysql.",
    "sqlite: tests for sqlite3.",
]
env = [
    "POETRY_VIRTUALENVS_IN_PROJECT=True"
]
testpaths = ["fastapi_template/tests"]

[tool.poetry.scripts]
fastapi_template = "fastapi_template.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
