[tool.poetry]
name = "fastapi_template"
version = "5.1.2"
description = "Feature-rich robust FastAPI template"
authors = ["Pavel Kirilin <win10@list.ru>"]
packages = [{ include = "fastapi_template" }]
repository = "https://github.com/s3rius/FastAPI-template"
homepage = "https://github.com/s3rius/FastAPI-template"
readme = "README.md"
keywords = ["FastAPI", "Cookiecutter", "Template"]


[tool.poetry.dependencies]
python = "^3.9"
cookiecutter = "^1.7.3"
pre-commit = "^2.14.0"
termcolor = "^1.1.0"
pydantic = ">=1.10"
simple-term-menu = "^1.5.2"
click = "^8.1.3"
prompt-toolkit = "^3.0.36"

[tool.poetry.group.dev.dependencies]
pytest = "^7"
pyyaml = "^6.0.1"
pytest-env = "^1"
Faker = "^8.14.0"
pytest-xdist = {version = "^3", extras = ["psutil"]}
requests = "^2.28.1"
pytest-retry = "^1.6.3"

[tool.pytest.ini_options]
minversion = "6.0"
markers = [
    "pg: tests for postgresql.",
    "mysql: tests for mysql.",
    "sqlite: tests for sqlite3.",
]
env = [
    "POETRY_VIRTUALENVS_IN_PROJECT=True",
    "PYTHON_KEYRING_BACKEND=keyring.backends.null.Keyring",
]
testpaths = ["fastapi_template/tests"]
retries = 3
retry_delay = 2
cumulative_timing = true

[tool.poetry.scripts]
fastapi_template = "fastapi_template.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
