[project]
name = "fastapi_template"
version = "0.0.0"
description = "Feature-rich robust FastAPI template"
authors = [{ name = "Pavel Kirilin", email = "win10@list.ru" }]
requires-python = ">=3.9,<4"
readme = "README.md"
keywords = [
    "FastAPI",
    "Cookiecutter",
    "Template",
]
dependencies = [
    "cookiecutter>=1.7.3,<2",
    "pre-commit>=2.14.0,<3",
    "termcolor>=1.1.0,<2",
    "pydantic>=1.10",
    "simple-term-menu>=1.5.2,<2",
    "click>=8.1.3,<9",
    "prompt-toolkit>=3.0.36,<4",
]

[project.urls]
Homepage = "https://github.com/s3rius/FastAPI-template"
Repository = "https://github.com/s3rius/FastAPI-template"

[project.scripts]
fastapi_template = "fastapi_template.__main__:main"

[dependency-groups]
dev = [
    "pytest>=7,<8",
    "pyyaml>=6.0.1,<7",
    "pytest-env>=1,<2",
    "Faker>=8.14.0,<9",
    "pytest-xdist[psutil]>=3,<4",
    "requests>=2.28.1,<3",
    "pytest-retry>=1.6.3,<2",
]

[tool.hatch.build.targets.sdist]
include = ["fastapi_template"]

[tool.hatch.build.targets.wheel]
include = ["fastapi_template"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
markers = [
    "pg: tests for postgresql.",
    "mysql: tests for mysql.",
    "sqlite: tests for sqlite3.",
]
env = [
    "POETRY_VIRTUALENVS_IN_PROJECT=True",
    "PYTHON_KEYRING_BACKEND=keyring.backends.null.Keyring",
]
testpaths = ["fastapi_template/tests"]
retries = 3
retry_delay = 2
cumulative_timing = true
