[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.11.8"
fastapi = "^0.61.1"
sqlalchemy = "^1.3.19"
loguru = "^0.5.2"
alembic = "^1.4.3"
httpx = "^0.14.3"
ujson = "^4.0.1"
gunicorn = "^20.0.4"
httptools = "^0.1.1"
{% if cookiecutter.pg_driver == "aiopg" -%}
aiopg = "^1.0.0"
{% else %}
psycopg2 = "^2.8.6"
asyncpgsa = "^0.26.3"
{% endif %}
{% if cookiecutter.add_redis == "True" -%}
aioredis = "^1.3.1"
{% endif %}
{% if cookiecutter.add_scheduler == "True" -%}
aioschedule = "^0.5.2"
{% endif %}

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
requests = "^2.24.0"
pytest-asyncio = "^0.14.0"
pre-commit = "^2.7.1"
pytest-cov = "^2.10.1"
python-dotenv = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"