[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
requires-python = ">=3.12,<4.0"
description = ""
authors = []
maintainers = []
readme = "README.md"
dependencies = [
  "fastapi >=0.122.0,<1",
  "uvicorn[standard] >=0.38.0,<1",
  {%- if cookiecutter.gunicorn == "True" %}
  "gunicorn >=23.0.0,<24",
  {%- endif %}
  {%- if cookiecutter.add_users == "True" %}
  {%- if cookiecutter.orm == "sqlalchemy" %}
  "fastapi-users >=15.0.1,<16",
  "httpx-oauth >=0.16.1,<1",
  "fastapi-users-db-sqlalchemy >=7.0.0,<8",
  {%- endif %}
  {%- endif %}
  {%- if cookiecutter.orm == "ormar" %}
  "pydantic >=2.5.3,<2.9.0",
  {%- else %}
  "pydantic >=2.12.5,<3",
  {%- endif %}
  "pydantic-settings >=2.12.0,<3",
  "yarl >=1.22.0,<2",
  "ujson >=5.11.0,<6",
{%- if cookiecutter.orm == "piccolo" %}
{%- if cookiecutter.db_info.name == "postgresql" %}
  "piccolo[postgres] >=1.30.0,<2",
{%- elif cookiecutter.db_info.name == "sqlite" %}
  "piccolo[sqlite] >=1.30.0,<2",
{%- endif %}
{%- endif %}
{%- if cookiecutter.orm == "sqlalchemy" %}
  "SQLAlchemy[asyncio] >=2.0.44,<3",
{%- if cookiecutter.enable_migrations == "True" %}
  "alembic >=1.17.2,<2",
{%- endif %}
{%- if cookiecutter.db_info.name == "postgresql" %}
  "asyncpg >=0.31.0,<1",
{%- elif cookiecutter.db_info.name == "sqlite" %}
  "aiosqlite >=0.21.0,<1",
{%- elif cookiecutter.db_info.name == "mysql" %}
  "aiomysql >=0.3.2,<1",
  "mysqlclient >=2.2.7,<3",
  "cryptography >=46.0.3,<47",
{%- endif %}
{%- endif %}
{%- if cookiecutter.orm == "tortoise" %}
  "tortoise-orm >=0.25.1,<1",
{%- if cookiecutter.enable_migrations == "True" %}
  "aerich >=0.9.2,<1",
{%- endif %}
{%- if cookiecutter.db_info.name == "postgresql" %}
  "asyncpg >=0.31.0,<1",
{%- elif cookiecutter.db_info.name == "sqlite" %}
  "aiosqlite >=0.21.0,<1",
{%- elif cookiecutter.db_info.name == "mysql" %}
  "aiomysql >=0.3.2,<1",
  "mysqlclient >=2.2.7,<3",
  "cryptography >=46.0.3,<47",
{%- endif %}
{%- endif %}
{%- if cookiecutter.orm == "ormar" %}
  "ormar >=0.20.2,<1",
{%- if cookiecutter.enable_migrations == "True" %}
  "alembic >=1.17.2,<2",
{%- endif %}
{%- if cookiecutter.db_info.name == "postgresql" %}
  "asyncpg >=0.31.0,<1",
  "psycopg2-binary >=2.9.11,<3",
{%- elif cookiecutter.db_info.name == "sqlite" %}
  "aiosqlite >=0.21.0,<1",
{%- elif cookiecutter.db_info.name == "mysql" %}
  "aiomysql >=0.3.2,<1",
  "mysqlclient >=2.2.7,<3",
{%- endif %}
{%- endif %}
{%- if cookiecutter.enable_redis == "True" %}
  "redis[hiredis] >=6,<7",
{%- endif %}
{%- if cookiecutter.self_hosted_swagger == 'True' %}
  "aiofiles >=25.1.0,<26",
{%- endif %}
{%- if cookiecutter.orm == "psycopg" %}
  "psycopg[binary,pool] >=3.2.13,<4",
{%- endif %}
  "httptools >=0.7.1,<1",
{%- if cookiecutter.orm == "beanie" %}
  "beanie >=2.0.1,<3",
{%- else %}
  "pymongo >=4.15.4,<5",
{%- endif %}
{%- if cookiecutter.api_type == "graphql" %}
  "strawberry-graphql[fastapi] >=0.287.0,<1",
{%- endif %}
{%- if cookiecutter.enable_rmq == "True" %}
  "aio-pika >=9.5.8,<10",
{%- endif %}
{%- if cookiecutter.prometheus_enabled == "True" %}
  "prometheus-client >=0.23.1,<1",
  "prometheus-fastapi-instrumentator >=7.1.0,<8",
{%- endif %}
{%- if cookiecutter.sentry_enabled == "True" %}
  "sentry-sdk >=2.46.0,<3",
{%- endif %}
{%- if cookiecutter.otlp_enabled == "True" %}
  "opentelemetry-api >=1.38.0,<2",
  "opentelemetry-sdk >=1.38.0,<2",
  "opentelemetry-exporter-otlp >=1.38.0,<2",
  "opentelemetry-instrumentation >=0.59b0,<1",
  "opentelemetry-instrumentation-fastapi >=0.59b0,<1",
{%- if cookiecutter.enable_redis == "True" %}
  "opentelemetry-instrumentation-redis >=0.59b0,<1",
{%- endif %}
{%- if cookiecutter.db_info.name == "postgresql" and cookiecutter.orm in ["ormar", "tortoise"] %}
  "opentelemetry-instrumentation-asyncpg >=0.59b0,<1",
{%- endif %}
{%- if cookiecutter.orm == "sqlalchemy" %}
  "opentelemetry-instrumentation-sqlalchemy >=0.59b0,<1",
{%- endif %}
{%- if cookiecutter.enable_rmq == "True" %}
  "opentelemetry-instrumentation-aio-pika >=0.59b0,<1",
{%- endif %}
{%- endif %}
{%- if cookiecutter.enable_loguru == "True" %}
  "loguru >=0.7.3,<1",
{%- endif %}
{%- if cookiecutter.enable_kafka == "True" %}
  "aiokafka >=0.12.0,<1",
{%- endif %}
{%- if cookiecutter.enable_taskiq == "True" %}
  "taskiq >=0.12.0,<1",
  "taskiq-fastapi >=0.3.6,<1",
{%- if cookiecutter.enable_redis == "True" %}
  "taskiq-redis >=1.1.2,<2",
{%- endif %}

{%- if cookiecutter.enable_rmq == "True" %}
  "taskiq-aio-pika >=0.5.0,<1",
{%- endif %}

{%- if (cookiecutter.enable_rmq or cookiecutter.enable_rmq) != "True" %}
  "pyzmq >=27.1.0,<28",
{%- endif %}
{%- endif %}
]

[dependency-groups]
dev = [
  "pytest >=9.0.1,<10",
  "ruff >=0.14.6,<1",
  "mypy >=1.19.0,<2",
  "pre-commit >=4.5.0,<5",
  "pytest-cov >=7.0.0,<8",
  "anyio >=4.11.0,<5",
  "pytest-env >=1.2.0,<2",
{%- if cookiecutter.enable_redis == "True" %}
  "fakeredis >=2.32.1,<3",
{%- endif %}
{%- if cookiecutter.orm == "tortoise" %}
  "asynctest >=0.13.0,<1",
  "nest-asyncio >=1.6.0,<2",
{%- endif %}
  "httpx >=0.28.1,<1",
{%- if cookiecutter.enable_taskiq == "True" %}
  "taskiq[reload] >=0.12.0,<1",
{%- endif %}
]


[tool.uv]
default-groups = ["dev"]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["{{cookiecutter.project_name}}",]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true
{%- if cookiecutter.api_type == "graphql" %}
plugins = []
{%- endif %}

{%- if cookiecutter.enable_redis == "True" %}

# Remove this and add `types-redis`
# when the issue https://github.com/python/typeshed/issues/8242 is resolved.
[[tool.mypy.overrides]]
module = [
    'redis.asyncio'
]
ignore_missing_imports = true

{%- endif %}

[tool.pytest.ini_options]
addopts = "-p no:unraisableexception"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
anyio_mode = "auto"
env = [
    "{{cookiecutter.project_name | upper}}_ENVIRONMENT=pytest",
    {%- if cookiecutter.db_info.name == "sqlite" %}
    "{{cookiecutter.project_name | upper}}_DB_FILE=test_db.sqlite3",
    {%- elif cookiecutter.db_info.name == "mongodb" %}
    "{{cookiecutter.project_name | upper}}_DB_BASE=admin",
    {%- else %}
    "{{cookiecutter.project_name | upper}}_DB_BASE={{cookiecutter.project_name}}_test",
    {%- endif %}
    {%- if cookiecutter.db_info.name == "mysql" %}
    "{{cookiecutter.project_name | upper}}_DB_USER=root"
    {%- endif %}
    {%- if cookiecutter.orm == "piccolo" %}
    "PICCOLO_CONF={{cookiecutter.project_name}}.piccolo_conf",
    {%- endif %}
    {%- if cookiecutter.sentry_enabled == "True" %}
    "{{cookiecutter.project_name | upper}}_SENTRY_DSN=",
    {%- endif %}
]

{%- if cookiecutter.orm == "tortoise" %}
{%- if cookiecutter.enable_migrations == "True" %}
[tool.aerich]
tortoise_orm = "{{cookiecutter.project_name}}.db.config.TORTOISE_CONFIG"
location = "./{{cookiecutter.project_name}}/db/migrations"
src_folder = "./{{cookiecutter.project_name}}"
{%- endif %}
{%- endif %}

[tool.ruff]
target-version = "py313"
# List of enabled rulsets.
# See https://docs.astral.sh/ruff/rules/ for more information.
lint.select = [ "E",     # Error
    "F",     # Pyflakes
    "W",     # Pycodestyle
    "C90",   # McCabe complexity
    "I",     # Isort
    "N",     # pep8-naming
    "D",     # Pydocstyle
    "ANN",   # Pytype annotations
    "S",     # Bandit
    "B",     # Bugbear
    "C4",    # Comprehensions
    "ISC",   # Implicit string concat
    "PIE",   # Unnecessary code
    "T20",   # Catch prints
    "PYI",   # validate pyi files
    "Q",     # Checks for quotes
    "RSE",   # Checks raise statements
    "RET",   # Checks return statements
    "SLF",   # Self checks
    "SIM",   # Simplificator
    "PTH",   # Pathlib checks
    "ERA",   # Checks for commented out code
    "PL",    # PyLint checks
    "RUF",   # Specific to Ruff checks
	"FA102", # Future annotations
	"UP",	 # Python updates
]
lint.ignore = [
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "B008",    # Do not perform function calls in argument defaults
    "D211",    # No blank lines allowed before class docstring
    "D212",    # Multi-line docstring summary should start at the first line
    "D401",    # First line should be in imperative mood
    "D104",    # Missing docstring in public package
    "D100",    # Missing docstring in public module
    "D202",    # No blank lines allowed after function docstring
    "ANN401",  # typing.Any are disallowed in `**kwargs
    "PLR0913", # Too many arguments for function call
    "D106",    # Missing docstring in public nested class
]
exclude = [
    {%- if cookiecutter.orm in ["ormar", "sqlalchemy", "piccolo", "tortoise"] %}
    "{{ cookiecutter.project_name }}/db/migrations",
    {%- endif %}
    ".venv/"
]
lint.mccabe = { max-complexity = 10 }
line-length = 88

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # Use of assert detected
	"PLC0415", # Import outside toplevel
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str", "float", "bytes"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
  {%- if cookiecutter.enable_taskiq == "True" %}
  "taskiq_dependencies.Depends",
  "taskiq.TaskiqDepends",
  {%- endif %}
  "fastapi.Depends",
  "fastapi.Query",
]

[fastapi-template.options]
{%- for key, value in cookiecutter.items() %}
{%- if not key.startswith("_") and not key == "db_info" %}
{{key}} = "{{value}}"
{%- endif %}
{%- endfor %}
